# TranslationTool

./: CMakeLists.txt  README.md  TranslationTool.sln  TranslationTool.vcxproj  TranslationTool.vcxproj.filters
src/: FileHandler.cpp  FileHandler.h  MainWindow.cpp  MainWindow.h  Settings.cpp  Settings.h  TranslationEngine.cpp  TranslationEngine.h  main.cpp
